ingress-controller/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts2
spec:
  rules:
    - host: test.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: main
                port:
                  number: 80
    - host: test2.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web1
                port:
                  number: 80
    - host: test3.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tomcat
                port:
                  number: 8080
